<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clear_sky1" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:layout_margin="15dp" >

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/titleText"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/titleText"
            android:layout_marginTop="20dp"
            android:text="@string/textView1"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/conditionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:singleLine="false"
            android:text="@string/conditionView"
            android:textSize="14sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/conditionView"
            android:layout_marginTop="21dp"
            android:background="@drawable/hr_line" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/conditionView"
            android:layout_below="@+id/button1"
            android:layout_marginTop="15dp"
            android:text="@string/forecastView"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="15dp"
            android:text="@string/dayView"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="15dp"
            android:text="@string/dayView"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="15dp"
            android:text="@string/dayView"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="15dp"
            android:text="@string/dayView"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginLeft="70dp"
            android:text="@string/FeatureconditionView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginRight="19dp"
            android:layout_marginTop="16dp"
            android:text="@string/dayView"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/textView8"
            android:text="@string/FeatureconditionView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/textView9"
            android:text="@string/FeatureconditionView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignLeft="@+id/textView10"
            android:text="@string/FeatureconditionView" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/textView11"
            android:text="@string/FeatureconditionView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView8"
            android:layout_alignBottom="@+id/textView8"
            android:layout_toRightOf="@+id/textView8"
            android:layout_marginLeft="5dp"
            android:text="@string/forecastHigh" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView13"
            android:layout_alignBottom="@+id/textView13"
            android:layout_toRightOf="@+id/textView13"
            android:layout_marginLeft="5dp"
            android:text="@string/forecastLow" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignLeft="@+id/textView13"
            android:text="@string/forecastHigh" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView10"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignLeft="@+id/textView15"
            android:text="@string/forecastHigh" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView11"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignLeft="@+id/textView16"
            android:text="@string/forecastHigh" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignLeft="@+id/textView17"
            android:text="@string/forecastHigh" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView15"
            android:layout_alignBottom="@+id/textView15"
            android:layout_alignLeft="@+id/textView14"
            android:text="@string/forecastLow" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignLeft="@+id/textView19"
            android:text="@string/forecastLow" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView7"
            android:layout_alignLeft="@+id/textView20"
            android:text="@string/forecastLow" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView18"
            android:layout_alignBottom="@+id/textView18"
            android:layout_alignLeft="@+id/textView21"
            android:text="@string/forecastLow" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="16dp"
            android:background="@drawable/hr_line" />
        
    </RelativeLayout>

</ScrollView>
